--- a/src/ui/Main/VerseButton.css
+++ b/src/ui/Main/VerseButton.css
@@ -17,7 +17,7 @@
 
 .icon-container {
   --icon-container-bg: var(--gray-3);
-  height: 20px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -39,22 +39,56 @@
   background: var(--gray-3);
 }
 
-.verse-button-container {
+.verse-button-container-col {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.display-indexes-container {
+  padding: 0 5px;
+  min-height: 25px;
+  background-color: color-mix(in srgb, var(--gray-0), var(--gray-1) 50%);
+  display: flex;
+  flex-direction: row;
+}
+
+.display-index {
+  margin: 0 5px;
+  color: gray;
+  font-weight: bold;
+}
+
+.verse-button-container-row {
   margin: 10px 0;
+  display: flex;
   overflow: clip;
 }
 
 .verse-button {
+  all: unset;
+  width: 100%;
+}
+.verse-button-content {
   background: var(--gray-1);
   border: none;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   font-size: 14px;
   padding: 3px;
+  min-height: 30px;
 }
 
-.verse-button:hover {
+.verse-button-hr {
+  width: 65%;
+  border: none;
+  background-color: var(--gray-4);
+  height: 1px;
+}
+
+.verse-button:hover .verse-button-content  {
   background: var(--gray-6)
 }
 
