--- a/dist-display/display.css
+++ b/dist-display/display.css
@@ -11,7 +11,18 @@ html, body {
 body {
   background-color: black;
   color: white;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-container {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.text {
+  font-size: 40px;
 }
