--- a/src/ui/Main/VerseButton.css
+++ b/src/ui/Main/VerseButton.css
@@ -25,14 +25,12 @@
   background-color: var(--icon-container-bg);
 }
 
-
 .icons-container {
   width: 16px;
   background: var(--gray-3);
   display: flex;
   flex-direction: column;
 }
-
 
 .lights-container {
   width: 8px;
@@ -51,12 +49,18 @@
   background-color: color-mix(in srgb, var(--gray-0), var(--gray-1) 50%);
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .display-index {
-  margin: 0 5px;
+  all: unset;
+  padding: 0 5px;
   color: gray;
   font-weight: bold;
+}
+
+.display-index:hover {
+  color: white !important;
 }
 
 .verse-button-container-row {
@@ -88,8 +92,8 @@
   height: 1px;
 }
 
-.verse-button:hover .verse-button-content  {
-  background: var(--gray-6)
+.verse-button:hover .verse-button-content {
+  background: var(--gray-6);
 }
 
 .line {
