--- a/dist-display/display.css
+++ b/dist-display/display.css
@@ -16,13 +16,16 @@ body {
 }
 
 .text-container {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .text {
-  font-size: 40px;
+  width: 100%;
+  padding-top: 60vh;
+  font-size: 400px;
 }
