--- a/src/ui/Main/VerseButton.css
+++ b/src/ui/Main/VerseButton.css
@@ -78,11 +78,15 @@
   border: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   width: 100%;
   font-size: 14px;
   padding: 3px;
   min-height: 30px;
+}
+
+.line {
+  text-align: center;
 }
 
 .verse-button-hr {
