keyboard song controls work :3

--- a/src/ui/Main/Body.css
+++ b/src/ui/Main/Body.css
@@ -1,25 +1,17 @@
 :root {
   --blink-opacity: 1;
 }
-.main-section {
-  /*background: blue*/
-}
-
-.section-title {
-  margin-bottom: 0;
-}
-
 @keyframes blink {
   50% {
     --blink-opacity: 0.3;
   }
 }
-.main-section {
-  --blink-opacity: 1;
+.main-container {
   animation: blink 0.7s step-start 0s infinite;
 }
 
-.main-section .blink {
+.blink {
   opacity: var(--blink-opacity);
 }
+
 
