--- a/src/ui/Main/VerseButton.css
+++ b/src/ui/Main/VerseButton.css
@@ -2,7 +2,7 @@
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  /*background-color: red;*/
+  /*background-color: var(--hi1);*/
 }
 
 .s {
