--- a/src/ui/Body/VerseButton.css
+++ b/src/ui/Body/VerseButton.css
@@ -15,6 +15,11 @@
   display: inline-block;
 }
 
+
+.no-select {
+  user-select: none;
+}
+
 .icon-container {
   --icon-container-bg: var(--gray-3);
   height: 25px;
@@ -32,9 +37,25 @@
   flex-direction: column;
 }
 
+.icon-button {
+  tab-index: -1;
+}
+
+.icon-button:hover {
+  background-color: white;
+  color: var(--icon-container-bg)
+}
+
+.icon-button:active {
+  background-color: white;
+  color: white;
+}
+
 .lights-container {
   width: 8px;
   background: var(--gray-3);
+  display: flex;
+  flex-direction: column;
 }
 
 .verse-button-container-col {
