--- a/src/ui/Body/VerseButton.css
+++ b/src/ui/Body/VerseButton.css
@@ -42,13 +42,12 @@
 }
 
 .icon-button:hover {
-  background-color: white;
-  color: var(--icon-container-bg)
+  background-color: var(--gray-5);
 }
 
 .icon-button:active {
-  background-color: white;
-  color: white;
+  background-color: var(--gray-5) !important;
+  color: var(--gray-5) !important;
 }
 
 .lights-container {
@@ -93,16 +92,25 @@
 .verse-button {
   all: unset;
   width: 100%;
-}
-.verse-button-content {
+  flex-grow: 1;
+  padding: 3px;
+  box-sizing: border-box;
   background: var(--gray-1);
+}
+
+.verse-button:hover {
+  background: var(--gray-5);
+}
+
+.verse-button-content {
   border: none;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  height: 100%;
   font-size: 14px;
-  padding: 3px;
   min-height: 30px;
 }
 
@@ -117,8 +125,12 @@
   height: 1px;
 }
 
-.verse-button:hover .verse-button-content {
-  background: var(--gray-6);
+.inline-verse-editor {
+  all: unset;
+  box-sizing: border-box;
+  padding: 5px;
+  font-size: 14px;
+  line-height: 2em;
 }
 
 .line {
