--- a/src/ui/Body/TopSection.css
+++ b/src/ui/Body/TopSection.css
@@ -5,3 +5,15 @@
   gap: 10px;
 }
 
+.top-section-button {
+  all: unset;
+  background: var(--gray-2);
+  padding: 5px 10px;
+  min-width: 120px;
+  text-align: center;
+}
+
+.top-section-button:hover {
+  background-color: var(--gray-4);
+}
+
