--- a/src/ui/Body/Body.css
+++ b/src/ui/Body/Body.css
@@ -23,25 +23,31 @@
 }
 
 .main-container > .open-element-menu {
-    min-height: 200px;
+    min-height: 250px;
+    width: 35%;
     max-width: 250px;
-    min-width: 250px;
 }
 .main-container > .control-section {
   flex-grow: 2;
+  width: 50px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .main-container {
     flex-direction: column;
     align-items: stretch;
+    max-width: 100%;
   }
   .main-container > .open-element-menu {
     min-height: 0px;
     max-width: none;
     min-width: none;
+    width: 100%;
     height: 100px;
     max-height: 100px;
+  }
+  .main-container > .control-section {
+    width: 100%;
   }
 }
 
