--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -29,4 +29,11 @@
    zoom: reset;
    }
 
+.inverse-title {
+  background: white;
+  color: black;
+  padding-left: 5px;
+  font-weight: bold;
+}
+
 
