--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -23,7 +23,10 @@
 
   --hi1: rgb(255, 30, 60);
   --hi2: rgb(120, 200, 255);
+
+  --br-small: 3px;
 }
+
 
 * {
   zoom: reset;
@@ -57,6 +60,11 @@
   width: 100%;
   border-radius: 3px 3px 0 0;
   flex-grow: 1;
+  padding: 0 4px;
   border-bottom: 3px solid white;
   background-color: var(--gray-2);
+}
+
+.form-label-1 {
+  display: block;
 }
