background images work :3

--- a/dist-display/display.css
+++ b/dist-display/display.css
@@ -30,6 +30,11 @@ body {
   width: 100%;
 }
 
+.global {
+  background-size: cover;
+  background-position: center;
+}
+
 /*  fields:
  *    global:
  *      background (as css value)
