--- a/dist-display/display.css
+++ b/dist-display/display.css
@@ -24,6 +24,9 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .text {
