--- a/src/ui/Body/ControlSection.css
+++ b/src/ui/Body/ControlSection.css
@@ -149,7 +149,11 @@
   box-sizing: border-box;
   padding: 5px;
   font-size: 14px;
-  line-height: 2em;
+  line-height: 1.5em;
+  overflow-y: scroll;
+  height: 100%;
+  resize: none;
+  background: var(--gray-1);
 }
 
 .line {
