--- a/src/ui/Body/Body.css
+++ b/src/ui/Body/Body.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  height: 100%;
 }
 
 .main-container {
@@ -20,10 +21,11 @@
   align-items: flex-start;
   gap: 20px;
   max-width: 1800px;
+  flex: 1;
+  min-height: 0;
 }
 
 .main-container > .open-element-menu {
-    min-height: 250px;
     width: 35%;
     max-width: 350px;
 }
