--- a/src/ui/Body/OpenElementMenu.css
+++ b/src/ui/Body/OpenElementMenu.css
@@ -5,10 +5,18 @@
   gap: 7px;
   /*padding: 10px;*/
   /*background-image: linear-gradient(var(--gray-3), var(--gray-0));*/
+  min-height: 0;
+  min-width: 0;
+  flex: 1;
+  height: 100%;
+}
+
+.open-element-menu * {
+  box-sizing: border-box;
 }
 
 .open-element-item-container {
-  height: 24px;
+  /*min-height: 24px;*/
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -44,8 +52,11 @@
 
 .open-element-item {
   all: unset;
+  color: color-mix(in srgb, gray, white 50%);
   line-height: 1.1em;
   display: flex;
+  flex-direction: row;
+  align-items: center;
   gap: 5px;
 }
 
@@ -58,6 +69,15 @@
 }
 
 .open-element-item-name {
-  color: color-mix(in srgb, gray, white 50%);
   font-weight: bold;
+  word-break: break-all; 
+}
+
+.open-elements-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-height: 0;
+  overflow-y: auto;
+  gap: 7px;
 }
