config looks to work? bold isnt writing. should also cleanup ipc function names etc

--- a/dist-display/display.css
+++ b/dist-display/display.css
@@ -38,8 +38,8 @@ body {
   z-index: 100;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: var(--logo-image);
-  background-size: var(--logo-scale);
+  /*background-image: var(--logo-image);*/
+  /*background-size: var(--logo-scale);*/
 }
 
 .text-container {
