--- a/src/ui/Body/DisplayControls/FormInput.css
+++ b/src/ui/Body/DisplayControls/FormInput.css
@@ -15,6 +15,8 @@
   font-size: inherit;
   padding: 0 7px;
   border-radius: var(--br-small);
+  flex-grow: 1;
+  text-align: center;
 }
 .boolean-input-active {
   background-color: var(--hi1);
