--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -22,7 +22,11 @@
  --base-200:	#CECDC3FF;
  --base-150:	#DAD8CEFF;
  --base-100:	#E6E4D9FF;
- --paper:	    #FFFCF0;
+ --paper:	    #FFFCF0FF;
+
+ --green-600: #66800BFF;
+ --green-400: #879A39FF;
+ --green-800: #3D4C07FF;
 
   /* variables */
   --gray-0: var(--black);
@@ -40,6 +44,22 @@
 
   color: var(paper);
   background-color: var(--gray-0);
+}
+
+
+*::-webkit-scrollbar {
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--gray-5);
+  border: 4px solid transparent;
+  border-radius: 8px;
+  background-clip: padding-box;  
+}
+
+*::-webkit-scrollbar-button {
+  display: none;
 }
 
 body {
@@ -89,6 +109,7 @@ body {
   padding: 0 4px;
   border-bottom: 3px solid white;
   background-color: var(--gray-2);
+  box-sizing: border-box;
 }
 
 .form-label-1 {
