--- a/src/ui/Body/SongControls.css
+++ b/src/ui/Body/SongControls.css
@@ -63,3 +63,26 @@
   margin: 0;
   margin-top: 30px;
 }
+
+.section-controls-add-buttons-container {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+.section-controls-add-button {
+  border: none;
+  font-size: 14px;
+  text-align: center;
+  background-color: var(--gray-2);
+  border-radius: var(--br-small);
+  flex: 1;
+  padding: 4px;
+}
+
+.section-controls-add-button:hover {
+  background-color: var(--gray-3);
+}
+
+.section-controls-add-button:active {
+  background-color: var(--gray-1);
+}
