--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -96,8 +96,12 @@ body {
   background-color: var(--gray-3);
 }
 .inverse-title-button:hover {
-  background-color: var(--gray-5);
+  background-color: var(--gray-4);
 }
+.inverse-title-button:active {
+  background-color: var(--gray-2);
+}
+
 .margin-bottom-7 {
   margin-bottom: 7px;
 }
