--- a/src/ui/Body/Bible.css
+++ b/src/ui/Body/Bible.css
@@ -15,13 +15,13 @@
   flex-direction: column;
   gap: var(--form-gap);
   flex: 1;
+  min-width: 0;
 }
 
 .bible-form-container {
   display: flex;
   --form-gap: 4px;
   gap: var(--form-gap);
-  min-height: 100px;
   max-height: 100px;
 
 }
@@ -61,7 +61,7 @@
   overflow: clip;
   white-space: nowrap;
   overflow: clip;
-  width: 100%;
+  max-width: 100%;
   padding: 4px;
   box-sizing: border-box;
 }
