--- a/src/ui/Body/TopSection.css
+++ b/src/ui/Body/TopSection.css
@@ -11,6 +11,7 @@
   padding: 5px 10px;
   min-width: 120px;
   text-align: center;
+  border-radius: var(--br-small);
 }
 
 .top-section-button:hover {
