--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -88,21 +88,27 @@ body {
 
 
 .inverse-title {
-  background: white;
+  background-color: white;
   color: black;
   padding-left: 5px;
   font-weight: bold;
   flex-grow: 1;
+  justify-self: flex-end;
+  height: 100%;
+  align-content: center;
 }
 .inverse-title-container {
   display: flex;
   gap: 7px;
   height: 28px;
+  align-items: center;
 }
 .inverse-title-button {
   flex-shrink: 0;
   border: none;
   background-color: var(--gray-3);
+  height: 100%;
+  border-radius: var(--br-small);
 }
 .inverse-title-button:hover {
   background-color: var(--gray-4);
